added css file, added image asset of self

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 
     <title>My Throwback Website</title>
 
+    <link href="style.css" rel="stylesheet" />
+    
 </head>
 
 <body>
 
     <header>
 
-        <h1>My Throwback Website</h1>
+        <h1>The Throwback Website of Sarah Verbinnen</h1>
+        <h3>For ART-1700 - Principles of Web Design</h3>
 
         <nav>
             <ul>
@@ -25,6 +28,20 @@
         </nav>
 
     </header>
+    
+    <article>
+
+        <p>
+            <img width="200px" height="" src="images/selfie.jpg" alt="Picture of me" /> <br>
+            Hello! My name is Sarah. <br>
+            I hail from Westerly, Rhode Island. <br>
+            My major is Web Programming and Development and I am a junior. <br>
+            Fun Fact! I've changed my major four times but this is the one... I think. <br>
+            When I grow up, I want to be a Front-End Developer or UX Designer. <br>
+            Why am I here? This is a requirement for my major but I'm also just very interested in web design. <br>
+        </p>
+
+    </article>
 
     <article>
 
