added a wrapper, added some floats to our nav

--- a/index.html
+++ b/index.html
@@ -7,76 +7,80 @@
     <title>My Throwback Website</title>
 
     <link href="style.css" rel="stylesheet" />
-    
+
 </head>
 
 <body>
 
-    <header>
+    <div id="wrapper">
 
-        <h1>The Throwback Website of Sarah Verbinnen</h1>
-        <h3>For ART-1700 - Principles of Web Design</h3>
+        <header>
 
-        <nav>
+            <h1>The Throwback Website of Sarah Verbinnen</h1>
+            <h3>For ART-1700 - Principles of Web Design</h3>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="https://mythrowbacksite.com/index.html">Home</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+        <article>
+
+            <p>
+                <img width="200px" height="" src="images/selfie.jpg" alt="Picture of me" /> <br>
+                Hello! My name is Sarah. <br>
+                I hail from Westerly, Rhode Island. <br>
+                My major is Web Programming and Development and I am a junior. <br>
+                Fun Fact! I've changed my major four times but this is the one... I think. <br>
+                When I grow up, I want to be a Front-End Developer or UX Designer. <br>
+                Why am I here? This is a requirement for my major but I'm also just very interested in web design. <br>
+            </p>
+
+        </article>
+
+        <article>
+
+            <h2>Welcome to my website!</h2>
+
+            <hr>
+
+            <p>
+                Hello there internet surfer! Thanks for stopping by! <br>
+                I hope you enjoy my internet site. It's really great, eh? <br>
+                I coded it myself! <br>
+            </p>
+
+            <blockquote>
+                <b>"You miss 100% of the shots you don't take"<br></b>
+                <i>- Wayne Gretsky</i>
+            </blockquote>
+
+            <h2>Favorite Baked Goods</h2>
+
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="https://mythrowbacksite.com/index.html">Home</a></li>
+                <li>Brownie</li>
+                <li>Chocolate Lava Cake</li>
+                <li>Cranberry Orange Muffin</li>
+                <li>Cupcake (no frosting though)</li>
+                <li>Christmas Crack</li>
             </ul>
-        </nav>
 
-    </header>
-    
-    <article>
+        </article>
 
-        <p>
-            <img width="200px" height="" src="images/selfie.jpg" alt="Picture of me" /> <br>
-            Hello! My name is Sarah. <br>
-            I hail from Westerly, Rhode Island. <br>
-            My major is Web Programming and Development and I am a junior. <br>
-            Fun Fact! I've changed my major four times but this is the one... I think. <br>
-            When I grow up, I want to be a Front-End Developer or UX Designer. <br>
-            Why am I here? This is a requirement for my major but I'm also just very interested in web design. <br>
-        </p>
+        <footer>
 
-    </article>
+            &copy; 1996 by me
 
-    <article>
+        </footer>
 
-        <h2>Welcome to my website!</h2>
-
-        <hr>
-
-        <p>
-            Hello there internet surfer! Thanks for stopping by! <br>
-            I hope you enjoy my internet site. It's really great, eh? <br>
-            I coded it myself! <br>
-        </p>
-
-        <blockquote>
-            <b>"You miss 100% of the shots you don't take"<br></b>
-            <i>- Wayne Gretsky</i>
-        </blockquote>
-
-        <h2>Flavourite Baked Goods</h2>
-
-        <ul>
-            <li>Brownie</li>
-            <li>Cupcake</li>
-            <li>Cannoli</li>
-            <li>Russian Tea Cakes</li>
-            <li>Chocolate Croissant</li>
-        </ul>
-
-    </article>
-
-    <footer>
-
-        &copy; 1996 by me
-
-    </footer>
+    </div><!-- /#wrapper-->
 
 </body>
 
