added structural markup for content sidecar and floated them

--- a/index.html
+++ b/index.html
@@ -31,48 +31,67 @@
 
         </header>
 
-        <article>
+        <div id="content-sidebar-wrapper">
 
-            <p>
-                <img width="200px" height="" src="images/selfie.jpg" alt="Picture of me" /> <br>
-                Hello! My name is Sarah. <br>
-                I hail from Westerly, Rhode Island. <br>
-                My major is Web Programming and Development and I am a junior. <br>
-                Fun Fact! I've changed my major four times but this is the one... I think. <br>
-                When I grow up, I want to be a Front-End Developer or UX Designer. <br>
-                Why am I here? This is a requirement for my major but I'm also just very interested in web design. <br>
-            </p>
+            <div id="content">
 
-        </article>
+                <article>
 
-        <article>
+                    <p>
+                        <img width="200px" height="" src="images/selfie.jpg" alt="Picture of me" /> <br>
+                        Hello! My name is Sarah. <br>
+                        I hail from Westerly, Rhode Island. <br>
+                        My major is Web Programming and Development and I am a junior. <br>
+                        Fun Fact! I've changed my major four times but this is the one... I think. <br>
+                        When I grow up, I want to be a Front-End Developer or UX Designer. <br>
+                        Why am I here? This is a requirement for my major but I'm also just very interested in web
+                        design.
+                        <br>
+                    </p>
 
-            <h2>Welcome to my website!</h2>
+                </article>
 
-            <hr>
+                <article>
 
-            <p>
-                Hello there internet surfer! Thanks for stopping by! <br>
-                I hope you enjoy my internet site. It's really great, eh? <br>
-                I coded it myself! <br>
-            </p>
+                    <h2>Welcome to my website!</h2>
 
-            <blockquote>
-                <b>"You miss 100% of the shots you don't take"<br></b>
-                <i>- Wayne Gretsky</i>
-            </blockquote>
+                    <hr>
 
-            <h2>Favorite Baked Goods</h2>
+                    <p>
+                        Hello there internet surfer! Thanks for stopping by! <br>
+                        I hope you enjoy my internet site. It's really great, eh? <br>
+                        I coded it myself! <br>
+                    </p>
 
-            <ul>
-                <li>Brownie</li>
-                <li>Chocolate Lava Cake</li>
-                <li>Cranberry Orange Muffin</li>
-                <li>Cupcake (no frosting though)</li>
-                <li>Christmas Crack</li>
-            </ul>
+                    <blockquote>
+                        <b>"You miss 100% of the shots you don't take"<br></b>
+                        <i>- Wayne Gretsky</i>
+                    </blockquote>
 
-        </article>
+                    <h2>Favorite Baked Goods</h2>
+
+                    <ul>
+                        <li>Brownie</li>
+                        <li>Chocolate Lava Cake</li>
+                        <li>Cranberry Orange Muffin</li>
+                        <li>Cupcake (no frosting though)</li>
+                        <li>Christmas Crack</li>
+                    </ul>
+
+                </article>
+
+            </div><!-- /#content -->
+
+            <div id="sidebar">
+
+                <form>
+                    <input type="email">
+                    <button type="submit">Submit</button>
+                </form>
+
+            </div><!-- /#sidebar -->
+
+        </div><!-- /#content-sidebar-wrapper -->
 
         <footer>
 
