--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="https://mythrowbacksite.com/index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li>
+                        <ul>
+                            <li>
+                                <a href="projects/bakery-site/index.html">Bakery Site</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
 
