added footer, volunteer page, and donation page

--- a/projects/project-2/index.html
+++ b/projects/project-2/index.html
@@ -13,12 +13,16 @@
 
 <body>
 
+  <!-- grid-container  -->
   <div class="grid-container">
-    <div class="grid-x grid-padding-x grid-padding-y">
+
+    <!-- grid-x  -->
+    <div class="grid-x grid-padding-x grid-padding-y grid-margin-y align-middle">
       <div class="small-4 cell">
         <img src="assets/img/SRN-Large-Color-350x179.png" alt="Senior Ride Logo with happy cars">
         <h1 class="hide">Senior Ride Nashville</h1>
       </div>
+
       <div class="small-8 cell">
         <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
           <button class="menu-icon" type="button" data-toggle="example-menu"></button>
@@ -28,11 +32,12 @@
         <div class="top-bar" id="example-menu">
           <div class="top-bar-left">
             <ul class="dropdown menu" data-dropdown-menu>
-              <li class="menu-text"><a href="index.html">Home</a></li>
+              <li class="menu-text"></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="give-a-ride.html">Give a Ride</a></li>
               <li><a href="get-a-ride.html">Get a Ride</a></li>
               <li><a href="volunteer-training.html">Volunteer Trainings</a></li>
-              <li><a href="get-more-info.html">+ Get More Info</a></li>
+              <li><a href="get-more-info.html">Get More Info</a></li>
               <li><a href="give-a-gift.html">Give a Gift</a></li>
             </ul>
           </div>
@@ -41,24 +46,35 @@
         </div>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
-    <!-- large main image-->
-
+    <!-- large main image -->
     <div id="home-main-image" class="grid-x grid-padding-y grid-margin-y">
 
-      <div class="small-12 cell">
-        <h2>Get from A to B and make a friends along the way</h2>
+      <div class="small-12 cell align-middle">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>GET FROM A TO B AND MAKE A FRIEND <br> ALONG THE WAY</h2>
+        <br>
       </div>
 
     </div>
+    <!-- /large main image -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-padding-y grid-margin-y">
       <div class="small-12 cell">
         <h3>Senior Ride Nashville is an affordable, assisted ride service that pairs a senior
           who needs a ride with a volunteer who can give one. Learn more by watching the video below. </h3>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-padding-y grid-margin-y">
       <div class="small-12 cell">
         <blockquote>
@@ -68,7 +84,9 @@
         </blockquote>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-margin-x">
       <div class="small-12 cell">
         <iframe src="https://player.vimeo.com/video/299341219?app_id=122963&amp;wmode=opaque" width="100%"
@@ -76,7 +94,9 @@
         fullscreen" allowfullscreen="" id="yui_3_17_2_1_1583430498774_146"></iframe>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-padding-y grid-margin-y">
       <div class="small-12 cell">
         <blockquote>
@@ -86,7 +106,9 @@
         </blockquote>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-margin-x">
 
       <div class="small-12 medium-4 cell text-center">
@@ -108,7 +130,9 @@
       </div>
 
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- grid-x  -->
     <div class="grid-x grid-padding-y grid-margin-y">
       <div class="small-12 cell">
         <blockquote>
@@ -119,65 +143,94 @@
         </blockquote>
       </div>
     </div>
+    <!-- /.grid-x  -->
 
+    <!-- footer -->
+    <footer>
+      
+      <!-- grid-x  -->
+      <div class="grid-x grid-padding-x grid-margin-x">
 
+        <div class="small-12 cell">
+          <label>Search
+            <input type="text" placeholder="Search">
+          </label>
+        </div>
+
+      </div>
+      <!-- /.grid-x  -->
+
+      <!-- grid-x  -->
+      <div class="grid-x grid-padding-x grid-margin-x">
+
+        <div class="small-12 medium-6 cell">
+          <p>
+            Senior Ride Nashville <br>
+            298 Foster Street<br>
+            Nashville, TN 37207<br>
+            (615) 610-4040<br>
+          </p>
+        </div>
+
+        <div class="small-12 medium-6 cell">
+          <h3> Stay connected </h3>
+          <p>Sign up with your email address to recieve updates.</p>
+          <label>Email
+            <input type="email" placeholder="Email Address">
+          </label>
+          <button type="submit" class="button">Sign Up</button>
+        </div>
+
+      </div>
+      <!-- /.grid-x  -->
+
+      <hr>
+
+      <!-- grid-x  -->
+      <div class="grid-x grid-padding-x grid-margin-x">
+
+        <div class="cell small-12 medium-6 text-center">
+          <a href="https://twitter.com/SeniorRideNash" target="_blank">
+            <img src="assets/img/twitter.png" alt="Logo for SRN Twitter">
+          </a>
+        </div>
+
+        <div class="cell small-12 medium-6 text-center">
+          <a href="https://www.facebook.com/SeniorRideNashville/" target="_blank">
+            <img src="assets/img/facebook.png" alt="Logo for SRN Facebook">
+          </a>
+        </div>
+
+      </div>
+      <!-- /.grid-x  -->
+
+      <hr>
+
+      <!-- grid-x  -->
+      <div class="grid-x grid-padding-x grid-margin-x">
+        <div class="small-12 cell text-center">
+          <a href="https://www.coamidtn.org/" target="_blank">
+            <img src="assets/img/founded_by_COA_white.png" alt="Logo for Council on Aging Website">
+          </a>
+        </div>
+      </div>
+      <!-- /.grid-x  -->
+
+      <!-- grid-x  -->
+      <div class="grid-x grid-padding-x grid-margin-x">
+        <div class="small-12 cell">
+          <p><br>&copy 2020 Senior Ride Nashville, INC. This site is an educational project for Belmont Universtiy.</p>
+        </div>
+      </div>
+      <!-- /.grid-x  -->
+
+    </footer>
+    <!-- /footer -->
 
   </div>
   <!-- /.grid-container-->
 
   <script src="assets/js/app.js"></script>
 </body>
-
-<footer>
-  <div class="grid-container">
-
-    <div class="grid-x grid-padding-y grid-margin-y">
-      <div class="small-12 cell">
-        <input type="search" placeholder="Search">
-      </div>
-    </div>
-
-    <div class="grid-x grid-padding-y grid-margin-y">
-      <div class="small-12 medium-4 cell">
-        <p>
-          Senior Ride Nashville <br>
-          298 Foster Street<br>
-          Nashville, TN 37207<br>
-          (615) 610-4040<br>
-        </p>
-      </div>
-
-      <div class="small-12 medium-8 cell">
-        <h4> Stay connected </h4>
-        Sign up with you email address to recieve updates.
-          <input type="email" placeholder="Email Address">
-          <button type="button" class="button">Sign Up</button>
-      </div>
-    </div>
-
-    <div class="grid-x grid-padding-y grid-margin-y">
-      <div class="small-12 medium-6 cell">
-        <a href="https://twitter.com/SeniorRideNash">
-          <img src="assets/img/twitter.png" alt="Link to SRN Twitter">
-        </a>
-      </div>
-
-      <div class="small-12 medium-6 cell">
-        <a href="https://www.facebook.com/SeniorRideNashville/">
-          <img src="assets/img/facebook.png" alt="Link to SRN Facebook">
-        </a>
-      </div>
-    </div>
-
-    <div class="grid-x grid-padding-y grid-margin-y">
-      <div class="small-12 cell">
-        <a href="https://www.coamidtn.org/">
-          <img src="assets/img/founded_by_COA_white.png" alt="Link to Council on Aging Website">
-        </a>
-      </div>
-    </div>
-
-  </div>
-</footer>
 
 </html>
