fixed icloud image error

--- a/projects/bakery-site/about.html
+++ b/projects/bakery-site/about.html
@@ -55,8 +55,8 @@
                 <article>
                     <img width="455" height="" src="images/vittorias.jpg" alt="Vittoria's building" />
                     <img width="455" height="" src="images/team.jpg" alt="The team" />
-                    <img width="455" height="455" src="images/couple3.png" alt="Team members" />
-                    <img width="455" height="" src="images/pizzaking2.png" alt="Team member" />
+                    <img width="455" height="455" src="images/couple3copy.png" alt="Team members" />
+                    <img width="455" height="" src="images/pizzaking2copy.png" alt="Team member" />
                 </article>
 
                 <br>
