added project-2 to throwback site nav bar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                             <li>
                                 <a href="projects/bakery-site/index.html">Bakery Site</a>
                             </li>
+                            <li>
+                                <a href="projects/project-2/index.html">SRN Website</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
