Added typography to final website

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <li>
                                 <a href="projects/project-2/index.html">SRN Website</a>
                             </li>
+                            <li>
+                                <a href="projects/final-project/">Final Project</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
